--- a/94. 二叉树的中序遍历.html
+++ b/94. 二叉树的中序遍历.html
@@ -30,6 +30,10 @@
         let res = [];
 
         function deep(node) {
+          if (!node) {
+            return;
+          }
+
           if (node.left) {
             deep(node.left);
           }
